Synchronized source code with main repo recent changes.
Change-Id: If1e46ad8ce3a36c653eb9ef5b7e540c5cb3ebbd1